2011-07-13  Henri Doreau <henri.doreau@greenbone.net>

	* src/html/os.xml: Updated with new entries.

2011-06-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/os_junos.png: New.

	* CMakeLists.txt: Install the new icon.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): Allow hosts to be empty in save_note and
	save_override.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result [details]): Add overrides control.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-note-form, html-edit-note-form)
	(html-create-override-form, html-edit-override-form): Turn off the details
	button of the associated note/override.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-table): Check whether the task is a
	container for the report template, instead of just passing 1.
	(status_bar): Remove shadowed case.

2011-06-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-note-form)
	(html-create-override-form): Move next inside the get_result params,
	because only get_result expects it.
	(result-detailed): Set next in the get_report case of the note-detailed
	call otherwise next ends up as the empty string.

2011-06-29  Matthew Mundell <matthew.mundell@greenbone.net>

	Get the result details add_override working.

	* src/gsad.c (exec_omp_post): Add a get_result case for create_override.
	(exec_omp_get): Pass override_task_id instead of task_id to
	create_override_omp, because the get_result case uses task_id.

	* src/gsad_omp.c (new_override_omp): Put arg for NEW_OVERRIDE NEXT in the
	right place.
	(create_override_omp): Add args for next page, task name and task ID.  Add
	the get_result case.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (html-create-override-form): Add params for the